test/1.4/errors/T_WREDUNDANTLEVEL.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

/// COMPILE-ONLY

device test;

/// SCAN-FOR-TAGS WREDUNDANTLEVEL.dml
import "WREDUNDANTLEVEL.dml";
